--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,3 +1,4 @@
+
 @import url("http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,300italic,400italic");
 @import url("font-awesome.min.css");
 
@@ -312,8 +313,7 @@
 
 	.\-1u {
 		margin-left: 8.33333%;
-	}
-
+}
 	@media screen and (min-width: 737px) {
 
 		.row > * {
@@ -1582,3 +1582,15 @@
 					}
 
 	}
+
+	.hand{
+
+		background-image: url("http://www.familyfriendpoems.com/images/thumbs/hero/take-my-hand-and-never-let-go.jpg");
+		
+	}
+
+	.bird{
+
+		background-image: url("http://www.birdslagoon.in/images/bird-flying.gif");
+
+}
